jsonapi_core/tests/compile_fail/type_on_non_relationship.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "articles")]
struct Bad {
    #[jsonapi(id)]
    id: String,
    #[jsonapi(type = "people")]
    title: String,
}

fn main() {}
